# FactoidFinance

./: .env.dev  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  package-lock.json  pyproject.toml  requirements.txt  tailwind.config.js
analysis/: .#views.py  admin.py  analyze.py  models.py  tasks.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_stockprofile_stock_cik_stock_cusip_stock_isin.py  0003_alter_stock_sector_alter_stock_ticker.py  0004_alter_stock_sector.py  0005_stock_isetforfund_alter_stock_sector.py  0006_alter_stock_firm_name.py  0007_article_stockanalysis_delete_stockprofile.py  0008_alter_stock_sector.py  0009_article_content_article_date_article_image_link_and_more.py  0010_alter_article_title.py  0011_alter_article_image_link_alter_article_original_link_and_more.py  0012_remove_article_sector_article_stock.py  0013_delete_article.py  0014_alter_stock_firm_name.py  0015_stockanalysis_exchange_stockanalysis_price_and_more.py  0016_stockanalysis_dividend_date_stockanalysis_dividendps_and_more.py  0017_stock_market_cap.py  0018_alter_stockanalysis_sharesoutstanding.py  0019_stockanalysis_marketcap.py  0020_stockanalysis_change.py  0021_alter_stockanalysis_marketcap_and_more.py  0022_alter_stockanalysis_open_and_more.py  0023_stockanalysis_eps_stockanalysis_pe.py
articles/: models.py  urls.py  views.py
factoid_finance/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: 404.html  base.html  index.html  sign_up.html
users/: forms.py  managers.py  models.py  tests.py  urls.py  views.py
(+22 files in other folders)
